# USignal

./: CMakeLists.txt  README.md
include/USignal/: Connection.hpp  MSignal.hpp  Signal.hpp  USignal.hpp
include/USignal/details/: Connection.inl  Signal.inl  Util.h
src/EMPTY/: CMakeLists.txt
src/core/: CMakeLists.txt
src/example/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  test.cpp
